# online_school

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  payments.json  pyproject.toml
.github/workflows/: ci-cd.yml
config/: celery.py  settings.py  urls.py
htmlcov/: index.html
lms/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_course_owner_lesson_owner.py  0004_subscription.py  0005_course_last_notification_sent.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_user_managers.py  0004_alter_payment_user.py  0005_alter_payment_amount_alter_payment_payment_date.py  0006_payment_payment_link_payment_session_id.py
